Factored functions that are passed to S/C into their own objects to prevent capture of variables on classes.